  - execution speed improvements (sshwarts and psychosmur)
  - fix MSR_APICBASE always returning APIC ADDRESS 0 (Kangmo Kim)
  - fetchdecode fixes for AMD64 and 3DNow!
  - change BX_PANIC messages to BX_INFO when behaviour exactly 
    matches Intel docs
  - fixed using invalid segment register for MOV instruction (h.johansson)
  - fixed ET bit mismatch between CR0 and SMSW instruction

- FPU
  - totally rewritten all FPU code based on softfloat library 
    (Stanislav Shwartsman)
  - significantly improved accuracy of all floating point
    instructions.
  - implemented all missed P6 and PNI floating point instructions.
  - hundreds of bug fixes in FPU code.

  TODO:
    ! Unmasked underflow/overflow should correct the result 
      by magic number for all operations, including float32 
      and float64.
    ! improve performance of transcendential instructions.

- Disassembler
  - fixed MOV opcode 0x88, had exchanged the operands (h.johansson)
  - fixed MOV opcode 0xA3, had wrong operand size (h.johansson)

- I/O devices
  - general
    - handle cpu reset through port 0x92
  - speaker emulation added (David N. Welton)
  - pci
    - PCI slot configuration added for 5 slots
    - PCI irq routing, irq sharing and level sensitive irq mode implemented
    - ne2k device appears as a Realtec 8029 NIC if connected to a PCI slot
    - PCI IDE controller dummy device added
  - serial
    - multiple serial port support added (4 ports now available)
    - partial raw serial support on win32 (transmit data)
    - serial port i/o mode option added (modes: null, file, term, raw)
  - parallel
    - multiple parallel port support added (2 ports now available)
  - vga
    - VBE 8 bit DAC support added
    - VBE memory now registered using DEV_register_memory_handlers()
  - floppy
    - raw floppy access now works on Win9x host (Ben Lunt)

- System BIOS
  - turn floppy motor off 2 seconds after last read/write/recalibrate command
    (Ben Lunt)